--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "logistical",
   "version": "1.0.0",
-  "main": "index.js",
-  "proxy": " https://github.com/exoe-xo/logictcal.git",
+  "main": "server.js",
+  "proxy": "https://logictcal.onrender.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run server\" \"npm run client\"",
